⚡️ toList instead of collect(Collectors.toList())